Order placement in the frontend done
